fix logo dark mode

--- a/src/components/header/style.scss
+++ b/src/components/header/style.scss
@@ -15,7 +15,7 @@ header {
 
   .logo {
     margin: 20px 0;
-    background-image: url("/logo.svg");
+    background-image: var(--logo-image);
     width: 160px;
     height: 160px;
     background-repeat: no-repeat;
